GPU subdivision: Blender crashes in background mode rendering if a specific object gets rendered #98052

Closed
opened 2022-05-11 21:51:57 +02:00 by Raimund Klink · 8 comments
Contributor

System Information
Operating system: Windows-11-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.1, 3.2, 3.3.0 Alpha, branch: master, commit date: 2022-05-10 22:38, hash: 1bb7fda600
Worked: none
Short description of error
Blender crashes in background mode rendering if the object Tooth.001is in the scene and gets rendered.
It is no longer crashing if I delete the modifier.

Exact steps for others to reproduce the error
Render the project in background mode.
(I used .\blender.exe -b --open-last -f 425)

Tooth.blend
Tooth.crash.txt
system-info.txt

**System Information** Operating system: Windows-11-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.1, 3.2, 3.3.0 Alpha, branch: master, commit date: 2022-05-10 22:38, hash: `1bb7fda600` Worked: none **Short description of error** Blender crashes in background mode rendering if the object `Tooth.001`is in the scene and gets rendered. It is no longer crashing if I delete the modifier. **Exact steps for others to reproduce the error** Render the project in background mode. (I used `.\blender.exe -b --open-last -f 425`) [Tooth.blend](https://archive.blender.org/developer/F13069247/Tooth.blend) [Tooth.crash.txt](https://archive.blender.org/developer/F13069249/Tooth.crash.txt) [system-info.txt](https://archive.blender.org/developer/F13069251/system-info.txt)
Author
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Member

Added subscribers: @kevindietrich, @PratikPB2123

Added subscribers: @kevindietrich, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

@Raimund58, thanks for the report.
I can repro crash at any frame when GPU subdivision is enabled

@Raimund58, thanks for the report. I can repro crash at any frame when GPU subdivision is enabled
Pratik Borhade changed title from EEVEE: Blender crashes in background mode rendering if a specific object gets rendered to GPU subdivision: Blender crashes in background mode rendering if a specific object gets rendered 2022-05-12 05:45:38 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

This effectively breaks Eevee background mode rendering, setting as high priority.

This effectively breaks Eevee background mode rendering, setting as high priority.

This issue was referenced by 0609b4bb49

This issue was referenced by 0609b4bb491eae28b7aff411f54d732b458d6ae9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-17 16:14:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98052
No description provided.