source/blender/blenkernel/intern/subdiv_modifier.c
@@ -3,6 +3,8 @@
 
 #include "BKE_subdiv_modifier.h"
 
+#include "BLI_session_uuid.h"
+
 #include "MEM_guardedalloc.h"
 
 #include "DNA_mesh_types.h"
@@ -105,12 +107,11 @@ bool BKE_subsurf_modifier_force_disable_gpu_evaluation_for_mesh(const SubsurfMod
   return subsurf_modifier_use_autosmooth_or_split_normals(smd, mesh);
 }
 
-bool BKE_subsurf_modifier_can_do_gpu_subdiv_ex(const Scene *scene,
-                                               const Object *ob,
-                                               const Mesh *mesh,
-                                               const SubsurfModifierData *smd,
-                                               int required_mode,
-                                               bool skip_check_is_last)
+bool BKE_subsurf_modifier_can_do_gpu_subdiv(const Scene *scene,
+                                            const Object *ob,
+                                            const Mesh *mesh,
+                                            const SubsurfModifierData *smd,
+                                            int required_mode)
 {
   if ((U.gpu_flag & USER_GPU_FLAG_SUBDIVISION_EVALUATION) == 0) {
     return false;
@@ -122,33 +123,17 @@ bool BKE_subsurf_modifier_can_do_gpu_subdiv_ex(const Scene *scene,
     return false;
   }
 
-  if (!skip_check_is_last) {
-    ModifierData *md = modifier_get_last_enabled_for_mode(scene, ob, required_mode);
-    if (md != (const ModifierData *)smd) {
-      return false;
-    }
+  ModifierData *md = modifier_get_last_enabled_for_mode(scene, ob, required_mode);
+  if (md != (const ModifierData *)smd) {
+    return false;
   }
 
   return is_subdivision_evaluation_possible_on_gpu();
 }
 
-bool BKE_subsurf_modifier_can_do_gpu_subdiv(const Scene *scene,
-                                            const Object *ob,
-                                            const Mesh *mesh,
-                                            int required_mode)
+bool BKE_subsurf_modifier_has_gpu_subdiv(const Mesh *mesh)
 {
-  ModifierData *md = modifier_get_last_enabled_for_mode(scene, ob, required_mode);
-
-  if (!md) {
-    return false;
-  }
-
-  if (md->type != eModifierType_Subsurf) {
-    return false;
-  }
-
-  return BKE_subsurf_modifier_can_do_gpu_subdiv_ex(
-      scene, ob, mesh, (SubsurfModifierData *)md, required_mode, true);
+  return BLI_session_uuid_is_generated(&mesh->runtime.subsurf_session_uuid);
 }
 
 void (*BKE_subsurf_modifier_free_gpu_cache_cb)(Subdiv *subdiv) = NULL;
